# hestia

./: .gitignore  Cargo.toml  README.md
hestia-agent/: Cargo.toml  README.md
hestia-agent/src/: container.rs  error.rs  main.rs  metrics.rs
hestia-agent/src/api/: containers.rs  health.rs  logs.rs  mod.rs
hestia-server/: Cargo.toml  README.md
hestia-server/src/: agents.rs  error.rs  main.rs
hestia-server/src/api/: containers.rs  health.rs  logs.rs  mod.rs  nodes.rs
hestia-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
hestia-ui/src/: App.tsx  api.ts  hooks.ts  styles.css
hestia-ui/src/components/: ContainerTable.tsx  CreateForm.tsx  LogViewer.tsx  NodeCard.tsx
hestia-ui/src/pages/: Containers.tsx  Dashboard.tsx
