[package]
name = "hestia-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hestia agent — runs on each Mac Mini, exposes a local REST API for container management and node metrics."

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "signal", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
sysinfo = "0.33"
