[package]
name = "hestia-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hestia server — central API that aggregates agents and talks to Nomad."

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP-only client (agents are reached over plain HTTP) — no TLS backend.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# Plain-ws client used to proxy agent log streams (no TLS backend).
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
